--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "r3f-perf": "^7.1.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
