--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "r3f-perf": "^7.1.2",
+    "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-glsl": "^1.1.2"
