--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.77.0",
     "@react-three/fiber": "^8.13.3",
     "@types/three": "^0.152.1",
+    "gsap": "^3.12.3",
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
